--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -3,7 +3,7 @@
 :root{
     --font-family: "Poppins", sans-serif;
     --cor-font:#000000;
-    --cor-secundaria: ##bee5fa;
+    --cor-secundaria: #bee5fa;
     --cor-principal: #5ab2ff;
     --cor-branca:  #ffffff; 
 }
